--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="https://judemwalker.com/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://judemwalker.com/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://judemwalker.com/favicon-16x16.png">
-<link  rel="shortcut icon" type="image/x-icon" href="https://judemwalker.com/favicon-16x16.png" >
+<link  rel="shortcut icon" type="image/x-icon" href="https://judemwalker.com/favicon.ico">
 <link rel="manifest" href="https://judemwalker.com/site.webmanifest">
 <link rel="mask-icon" href="https://judemwalker.com/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
